aggiunto colore alle icone e dato stile

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
    <div class="container">
       
- <!-- <div id="icons" class"color"> 
+ <!-- <div class="icons"> 
             <i class="fa-solid fa-cat"></i>
-            <div class="name">CAT</div>
+            <div class="name"></div>
         </div> -->
    </div>
  
